--- a/TikTacToeGame/app/build.gradle
+++ b/TikTacToeGame/app/build.gradle
@@ -1,19 +1,18 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-android-extensions'
     id 'kotlin-android'
     id  'kotlin-kapt'
 }
 
 android {
     namespace 'com.r4ziel.tiktactoegame'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.r4ziel.tiktactoegame"
         minSdk 24
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -64,17 +63,16 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.fragment:fragment-ktx:1.5.7"
-    implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
-    implementation "io.reactivex.rxjava3:rxjava:3.0.0"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.6'
 
     //Koin Dependency
-    implementation "io.insert-koin:koin-core:3.0.1"
-    implementation "io.insert-koin:koin-android:3.0.1"
-    implementation "io.insert-koin:koin-core-ext:3.0.1"
+    implementation 'io.insert-koin:koin-core:3.4.0'
+    implementation 'io.insert-koin:koin-android:3.4.0'
 
 
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
