--- a/TikTacToeGame/app/build.gradle
+++ b/TikTacToeGame/app/build.gradle
@@ -2,7 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android'
-    id  'kotlin-kapt'
+    id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -48,7 +49,11 @@ android {
     }
 
     buildFeatures {
-        viewBinding true
+        viewBinding = true
+    }
+
+    androidExtensions {
+        experimental = true
     }
 }
 
