--- a/TikTacToeGame/app/build.gradle
+++ b/TikTacToeGame/app/build.gradle
@@ -59,6 +59,10 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true
     }
+
+    buildscript {
+        ext.room_version = '2.1.0-alpha01'
+    }
 }
 
 dependencies {
@@ -75,10 +79,23 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.6'
 
+    //Room Dependency
+    implementation "androidx.room:room-runtime:2.5.1"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    kapt "androidx.room:room-compiler:2.5.1"
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.5.1"
+    //coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
     //Koin Dependency
     implementation 'io.insert-koin:koin-core:3.4.0'
     implementation 'io.insert-koin:koin-android:3.4.0'
     testImplementation("io.insert-koin:koin-test-junit5:3.4.0")
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
     testImplementation 'android.arch.core:core-testing:1.1.1'
     testImplementation 'androidx.arch.core:core-testing:2.2.0'
