--- a/TikTacToeGame/app/build.gradle
+++ b/TikTacToeGame/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android'
-    id 'kotlin-kapt'
     id 'kotlin-android-extensions'
 }
 
@@ -83,7 +82,7 @@ dependencies {
     implementation "androidx.room:room-runtime:2.5.1"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    kapt "androidx.room:room-compiler:2.5.1"
+//    kapt "androidx.room:room-compiler:2.5.1"
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.5.1"
     //coroutines
